--- a/二.图形学重要概念.md
+++ b/二.图形学重要概念.md
@@ -5,6 +5,7 @@
     * 三角网络模型
     * 光照模型和明暗处理
 * 视点变化和视点方向
+* 变换
  
 
 ## 1.色彩视觉
@@ -216,3 +217,66 @@ L入射光，R反射光，N物体表面法向量，V视点方向，H是L和V夹角的角平分线方向
 
 
 ![]()
+
+## 变换(Transformation)
+* 变换是一个将空间中的点x映射成其他的x'的函数
+
+![](http://oo8jzybo8.bkt.clouddn.com/6.%E7%AE%80%E5%8D%95%E5%8F%98%E6%8D%A2.png)
+* 从左到右的变换分别是：
+    * 不变（Identity），平移（Translation），旋转（Rotation），均衡缩放（Isotropic scaling）
+* 变换可以相互组合和嵌套
+    * 例如：先旋转，再缩放，最后平移
+* 简单变换都是可逆的
+
+### 变换的分类
+* 常见的变换有如下几类
+    * 刚体变换（Rigid-body Transformation）
+    * 相似变换（Similarity Transformation）
+    * 线性变换（Linear Transformation）
+    * 仿射变换（Affine Transformation）
+    * 投影变换（Projective Transformation）
+    
+
+#### 刚体变换
+* 保持度量（长度，角度，大小）
+* 刚体变换包括
+    * 不变
+    * 平移
+    * 旋转
+    * 他们的复合
+![刚体变换](http://oo8jzybo8.bkt.clouddn.com/6.%E5%88%9A%E4%BD%93%E5%8F%98%E6%8D%A2.png)
+
+#### 相似变换
+* 保持角度
+* 相似变换包括
+    * 不变
+    * 平移
+    * 旋转
+    * 均衡缩放
+    * 他们的复合
+
+#### 线性变换
+* 线性变换满足以下方程：
+    > L(p+q)=L(p)+L(q)
+
+    > aL(p)=L(ap)
+* 线性变换包括
+    * 不变旋转缩放
+    * 对称（Reflection），错切（Shear）
+
+![](http://oo8jzybo8.bkt.clouddn.com/6.%E7%BA%BF%E6%80%A7%E5%8F%98%E6%8D%A2.png)
+
+#### 仿射变换
+* 保持直线以及直线与直线的平行
+    * 两条平行的直线，在仿射变换之后依然平行
+
+* 仿射变换包括
+    * 线性变换
+    * 相似变换
+    * 他们的符合
+
+![](http://oo8jzybo8.bkt.clouddn.com/6.%E4%BB%BF%E5%B0%84%E5%8F%98%E6%8D%A2.png)
+
+#### 投影变换
+
+![](http://oo8jzybo8.bkt.clouddn.com/6.%E6%8A%95%E5%BD%B1%E5%8F%98%E6%8D%A2.png)
