BRDF经典经验模型

--- a/三.材质反射属性模型BRDF.md
+++ b/三.材质反射属性模型BRDF.md
@@ -86,3 +86,86 @@ Area=Acos θ
 
 ### 光亮度（Radiance）
 * 光亮度表示物体表面沿着某一方向的明亮成都，它表示单位投影面积和单位立体角上的光通量。
+* 
+
+## BRDF的定义和性质
+* BRDF的定义
+* BRDF的性质
+    * 可逆性（Reciprocity）
+    * 能量守恒
+    * 基于BRDF的渲染方程（Redering Equation）
+    
+### BRDF的定义
+* BRDF描述的是物体表面将光能从任何一个入射方向反射到任何一个视点方向的反射特性。
+* BRDF模型是绝大多数图形学算法中用于描述光反射现象的基本模型。
+* BRDF是关于入射光方向和反射光方向的四维实值函数，它等于反射方向的光亮度和沿入射方向的入射光的辉度之比：
+    > f(wi→wr)=dLr(wr)/dEi
+
+    * 可以写成关于入射光的光亮度的形式
+    > f(wi→wr)=dLr(wr)/Li(wi)cos wi dwi
+
+![]()
+
+### BRDF的可逆性
+* BRDF的可逆性源自于Helmholtz光路可逆性
+* BRDF的可逆性是说：交换入射光和反射光的角色，并不会改变BRDF的值
+    > f(wi→wr)=f(wr→wi)
+
+### 能量守恒性质
+* BRDF需要遵循的另一个物理定律是能量守恒。入射光的能量与出射光的总能量应该相等
+    > Qincoming=Qreflected + Qabsorb + Qtransmitted 
+
+* 因此BRDF必须满足如下积分的不等式、
+
+![]()
+
+### 渲染方程（Redering Equation）
+* 用于计算环境光照明下的反射光的光亮度，可以写成不同角度入射光的光亮度乘BRDF的积分
+
+![]()
+
+## BRDF模型
+* 为了方便高效的使用BRDF数据，往往被组织成为参数化的数值模型
+* BRDF的数值模型分为三类
+    * 经验模型（Empirical Models）
+    * 基于物理的模型（Physical-based Models）
+    * 数据表达的模型（Data-driven Models）
+    
+* 经验模型
+    * 使用基于实验提出的公式对BRDF做快速估计
+* 基于物理的模型
+    * 根据物体表面材料的几何以及光学属性简历反射方程计算BRDF
+* 数据表达的模型
+    * 将BRDF按照实测数据建立查找表，以便于快速的查找和计算
+
+
+
+### 经验模型1：Lambertain
+* Lambertain模型是最基本的反射模型
+    * 反射光线被均匀的反射到到各个方向
+    * 沿不同的方向BRDF是一个常数
+* 反射率
+    * 反射率是反射光亮度与入射光亮度之比。
+
+![]()
+
+* Lambert漫反射模型能很好的描述包含纯粹漫反射的物体（如：纸张）
+* Lambert漫反射模型不能表现出材质的镜面反射效果，而镜面反射对金属材质非常重要。
+* 由于Lambert模型的简洁以及对漫反射良好的描述，常在其他经验模型中作为分量被包含
+
+
+### 经验模型2：Phong模型
+* Phong模型是在Lambert漫反射模型的基础上，添加了镜面反射项，以表达反射角上的镜面反射效果
+
+![]()
+
+* 其中pd和ps分别表示漫反射光和镜面反射光线的反射率，s表示发光指数，用于描述镜面反射的锋利度。 
+* Phong模型不满足可逆性
+* Phong模型缺乏物理解释，并且对于某些金属材质，它并不十分准确，优势在于简洁高效，可以同时表现漫反射和镜面反射的特征。
+
+![]()
+
+### Phong模型的扩展
+* Blinn-Phong模型
+* 引入入射方向l和视线方向v的角平分线h，使用h和法向n的点积代替原来的r与v的点积，简化运算。
+![]()
