修正字符编码问题

--- a/一.计算机图形学的研究前沿及应用.md
+++ b/一.计算机图形学的研究前沿及应用.md
@@ -1,30 +1,30 @@
-### Í¼ÐÎÓëÍ¼Ïó
-* Í¼Ïó´¿Ö¸¾Í¼ÆËã»úÄÚÒÔÎ»Í¼(Bitmap)ÐÎÊ½´æÔÚµÄ»Ò¶ÈÐÅÏ¢
-* Í¼ÐÎº¬ÓÐ¼¸ºÎÊôÐÔ£¬¸üÇ¿µ÷³¡¾°µÄ¼¸ºÎ±íÊ¾£¬ÊÇÓÉ³¡¾°µÄ¼¸ºÎÄ£ÐÍºÍ¾°ÎïµÄÎïÀíÊôÐÔ¹²Í¬×é³É
-* Í¼ÐÎÖ÷Òª·ÖÎªÁ½Àà£º
-    * »ùÓÚÏßÌõÐÅÏ¢±íÊ¾
-    * Ã÷°µÍ¼(Shading)
+### å›¾å½¢ä¸Žå›¾è±¡
+* å›¾è±¡çº¯æŒ‡å°±è®¡ç®—æœºå†…ä»¥ä½å›¾(Bitmap)å½¢å¼å­˜åœ¨çš„ç°åº¦ä¿¡æ¯
+* å›¾å½¢å«æœ‰å‡ ä½•å±žæ€§ï¼Œæ›´å¼ºè°ƒåœºæ™¯çš„å‡ ä½•è¡¨ç¤ºï¼Œæ˜¯ç”±åœºæ™¯çš„å‡ ä½•æ¨¡åž‹å’Œæ™¯ç‰©çš„ç‰©ç†å±žæ€§å…±åŒç»„æˆ
+* å›¾å½¢ä¸»è¦åˆ†ä¸ºä¸¤ç±»ï¼š
+    * åŸºäºŽçº¿æ¡ä¿¡æ¯è¡¨ç¤º
+    * æ˜Žæš—å›¾(Shading)
 
-# ¼ÆËã»úÍ¼ÐÎÑ§µÄÑÐ¾¿Ç°ÑØ¼°Ó¦ÓÃ
+# è®¡ç®—æœºå›¾å½¢å­¦çš„ç ”ç©¶å‰æ²¿åŠåº”ç”¨
 
-## Ò».¾­µäµÄÕæÊµ¸ÐÍ¼ÐÎÑ§
-ÕæÊµ¸Ð»æÖÆµÄÄ¿µÄÊÇÄ£ÄâÕæÊµÎÞÌâµÄÎÞÁ¦ÊôÐÔ£¬°üÀ¨ÎÞÎïÌåµÄÐÎÌ¬£¬¹âÑ§ÐÔÖÊ£¬±íÃæµÄÎÆÀíºÍ´Ö²Ú³É¶¼£¬ÒÔ¼°ÎïÌå¼äµÄÏà¶ÔÎ»ÖÃÕÚµ²¹ØÏµ
+## ä¸€.ç»å…¸çš„çœŸå®žæ„Ÿå›¾å½¢å­¦
+çœŸå®žæ„Ÿç»˜åˆ¶çš„ç›®çš„æ˜¯æ¨¡æ‹ŸçœŸå®žæ— é¢˜çš„æ— åŠ›å±žæ€§ï¼ŒåŒ…æ‹¬æ— ç‰©ä½“çš„å½¢æ€ï¼Œå…‰å­¦æ€§è´¨ï¼Œè¡¨é¢çš„çº¹ç†å’Œç²—ç³™æˆéƒ½ï¼Œä»¥åŠç‰©ä½“é—´çš„ç›¸å¯¹ä½ç½®é®æŒ¡å…³ç³»
 
-* ¹âÕÕÄ£ÐÍ
-    * ¼òµ¥¹âÕÕÄ£ÐÍ
-    * ¾Ö²¿¹âÕÕÄ£ÐÍ
-    * ÕûÌå¹âÕÕÄ£ÐÍ
-* »æÖÆ·½·¨
-    * ¹âÏß¸ú×Ù
-    * ·øÉä¶È
-* ¼ÓËÙËã·¨¼°ÆäËû
-    * °üÎ§ºÐ£¬°Ë²æÊ÷
-    * ÒõÓ°Ëã·¨£¬ÎÆÀíºÏ³É
+* å…‰ç…§æ¨¡åž‹
+    * ç®€å•å…‰ç…§æ¨¡åž‹
+    * å±€éƒ¨å…‰ç…§æ¨¡åž‹
+    * æ•´ä½“å…‰ç…§æ¨¡åž‹
+* ç»˜åˆ¶æ–¹æ³•
+    * å…‰çº¿è·Ÿè¸ª
+    * è¾å°„åº¦
+* åŠ é€Ÿç®—æ³•åŠå…¶ä»–
+    * åŒ…å›´ç›’ï¼Œå…«å‰æ ‘
+    * é˜´å½±ç®—æ³•ï¼Œçº¹ç†åˆæˆ
 
-### ÑÐ¾¿¾ÙÀý
-* »ùÓÚÔ¤¼ÆËãµÄÈ«¾Ö¹âÕÕÊµÊ±»æÖÆ
-* ±íÃæÏ¸½Ú»æÖÆÓëÌåÎÆÀí
-* Í··¢µÄ½»»¥»æÖÆÓë±à¼­
+### ç ”ç©¶ä¸¾ä¾‹
+* åŸºäºŽé¢„è®¡ç®—çš„å…¨å±€å…‰ç…§å®žæ—¶ç»˜åˆ¶
+* è¡¨é¢ç»†èŠ‚ç»˜åˆ¶ä¸Žä½“çº¹ç†
+* å¤´å‘çš„äº¤äº’ç»˜åˆ¶ä¸Žç¼–è¾‘
 
 ![](http://oo8jzybo8.bkt.clouddn.com/1.%E5%85%A8%E5%B1%80%E5%85%89%E7%85%A7.png) 
 
@@ -32,44 +32,44 @@
 
 ![](http://oo8jzybo8.bkt.clouddn.com/1.2%E5%A4%B4%E5%8F%91%E6%9F%93%E8%89%B2%E4%BA%A4%E4%BA%92.png)
 
-## ¶þ.¼ÆËã»ú¶¯»­
-¼ÆËã»ú¶¯»­Öµ²ÉÓÃÍ¼ÐÎÓëÍ¼ÏñµÄ´¦Àí¼¼Êõ£¬Í¨¹ý±à³Ì»ò¶¯»­ÖÆ×÷Èí¼þÉú³ÉÒ»ÏµÁÐµÄ¾°Îï»­Ãæ£¬ÆäÖÐµ±Ç°Ö¡ÊÇÇ°Ò»Ö¡µÄ²¿·ÖÐÞ¸Ä¡£¼ÆËã»ú¶¯»­ÊÇ²ÉÓÃÁ¬Ðø²¥·Å¾²Ö¹Í¼ÏñµÄ·½·¨£¬²úÉúÎïÌåÔË¶¯µÄÐ§¹û¡£
+## äºŒ.è®¡ç®—æœºåŠ¨ç”»
+è®¡ç®—æœºåŠ¨ç”»å€¼é‡‡ç”¨å›¾å½¢ä¸Žå›¾åƒçš„å¤„ç†æŠ€æœ¯ï¼Œé€šè¿‡ç¼–ç¨‹æˆ–åŠ¨ç”»åˆ¶ä½œè½¯ä»¶ç”Ÿæˆä¸€ç³»åˆ—çš„æ™¯ç‰©ç”»é¢ï¼Œå…¶ä¸­å½“å‰å¸§æ˜¯å‰ä¸€å¸§çš„éƒ¨åˆ†ä¿®æ”¹ã€‚è®¡ç®—æœºåŠ¨ç”»æ˜¯é‡‡ç”¨è¿žç»­æ’­æ”¾é™æ­¢å›¾åƒçš„æ–¹æ³•ï¼Œäº§ç”Ÿç‰©ä½“è¿åŠ¨çš„æ•ˆæžœã€‚
 
-* ¶þÎ¬¶¯»­
-    * Í¼Ïó±äÐÎ
-    * ÐÎ×´»ìºÏ
-* ÈýÎ¬¶¯»­
-    * ¹Ø¼üÖ¡¶¯»­
-    * ±äÐÎÎïÌå¶¯»­
-    * ¹ý³Ì¶¯»­
-    * ¹Ø½Ú¶¯»­ÓëÈËÌå¶¯»­
-    * »ùÓÚÊÓÆµµÄ¶¯»­
+* äºŒç»´åŠ¨ç”»
+    * å›¾è±¡å˜å½¢
+    * å½¢çŠ¶æ··åˆ
+* ä¸‰ç»´åŠ¨ç”»
+    * å…³é”®å¸§åŠ¨ç”»
+    * å˜å½¢ç‰©ä½“åŠ¨ç”»
+    * è¿‡ç¨‹åŠ¨ç”»
+    * å…³èŠ‚åŠ¨ç”»ä¸Žäººä½“åŠ¨ç”»
+    * åŸºäºŽè§†é¢‘çš„åŠ¨ç”»
     
 ![](http://oo8jzybo8.bkt.clouddn.com/2%E5%9F%BA%E4%BA%8E%E7%89%B9%E5%BE%81%E7%9A%84%E5%9B%BE%E8%B1%A1%E5%8F%98%E5%BD%A2.png)
 
-## Èý.¼¸ºÎÔìÐÍºÍ´¦Àí
-¼¸ºÎÔìÐÍÑÐ¾¿ÀûÓÃ¼ÆËã»ú±íÊ¾¡¢¹¹½¨ÈýÎ¬¼¸ºÎÄ£ÐÍ£¬¼¸ºÎ´¦Àí²àÖØ¶ÔÒÑÓÐµÄÄ£ÐÍ½øÐÐ´¦Àí£¬Ê¹µÃÂú×ãÓÃ»§µÄÒªÇó
+## ä¸‰.å‡ ä½•é€ åž‹å’Œå¤„ç†
+å‡ ä½•é€ åž‹ç ”ç©¶åˆ©ç”¨è®¡ç®—æœºè¡¨ç¤ºã€æž„å»ºä¸‰ç»´å‡ ä½•æ¨¡åž‹ï¼Œå‡ ä½•å¤„ç†ä¾§é‡å¯¹å·²æœ‰çš„æ¨¡åž‹è¿›è¡Œå¤„ç†ï¼Œä½¿å¾—æ»¡è¶³ç”¨æˆ·çš„è¦æ±‚
 
-* ¼¸ºÎÔìÐÍ
-    * ÇúÏßÇúÃæÔìÐÍ£ºBezier£¬BÑùÌõ£¬NURBS
-    * ÊµÌåÔìÐÍ
-* ¼¸ºÎ´¦Àí
-    * ¼ò»¯
-    * ·Ö¸î
-    * ²ÎÊý»¯
-    * ÌØÕ÷ÌáÈ¡
-    * ¼¸ºÎ±äÐÎ
+* å‡ ä½•é€ åž‹
+    * æ›²çº¿æ›²é¢é€ åž‹ï¼šBezierï¼ŒBæ ·æ¡ï¼ŒNURBS
+    * å®žä½“é€ åž‹
+* å‡ ä½•å¤„ç†
+    * ç®€åŒ–
+    * åˆ†å‰²
+    * å‚æ•°åŒ–
+    * ç‰¹å¾æå–
+    * å‡ ä½•å˜å½¢
 
 ![](http://oo8jzybo8.bkt.clouddn.com/3%E7%89%B9%E5%BE%81%E6%95%8F%E6%84%9F%E7%9A%84%E5%87%A0%E4%BD%95%E5%A4%84%E7%90%86.png)
 
 ![](http://oo8jzybo8.bkt.clouddn.com/3.1%E6%8B%93%E6%89%91%E4%BF%AE%E5%A4%8D%E4%B8%8E%E7%BC%96%E8%BE%91.png)
     
-## ËÄ.»ùÓÚÍ¼ÏñºÍÊÓÆµµÄ»æÖÆ
-»ùÓÚÍ¼ÏñºÍÊÓÆµµÄ»æÖÆÊÇÖ¸ÀûÓÃÍ¼ÐÎÑ§¼¼Êõ½øÐÐÍ¼ÏñºÍÊÓÆµµÄ´¦Àí£¬ÒÔÂú×ãÓÃ»§µÄÌØ¶¨ÐèÇó
+## å››.åŸºäºŽå›¾åƒå’Œè§†é¢‘çš„ç»˜åˆ¶
+åŸºäºŽå›¾åƒå’Œè§†é¢‘çš„ç»˜åˆ¶æ˜¯æŒ‡åˆ©ç”¨å›¾å½¢å­¦æŠ€æœ¯è¿›è¡Œå›¾åƒå’Œè§†é¢‘çš„å¤„ç†ï¼Œä»¥æ»¡è¶³ç”¨æˆ·çš„ç‰¹å®šéœ€æ±‚
 
-* »­ÖÐÓÎ
-* ÊÓµã±äÐÎ(View morphing)
-* ÊÓÆµ¾«Áé(Video Sprites)
+* ç”»ä¸­æ¸¸
+* è§†ç‚¹å˜å½¢(View morphing)
+* è§†é¢‘ç²¾çµ(Video Sprites)
 
 
 ![](http://oo8jzybo8.bkt.clouddn.com/4.1%E6%B0%B4%E5%A2%A8%E9%A3%8E%E6%A0%BC.gif)
