添加Phong模型示例

--- a/三.材质反射属性模型BRDF.md
+++ b/三.材质反射属性模型BRDF.md
@@ -1,4 +1,4 @@
-* 双向反射分布函数（BRDF：Bidirecitonal Reflectance Distribution Function）
+﻿* 双向反射分布函数（BRDF：Bidirecitonal Reflectance Distribution Function）
     * 用来描述物体表面对光的反射性质
 * 预备知识
 * BRDF的定义和性质
@@ -180,6 +180,9 @@ Area=Acos θ
 * 通过去掉Phong模型中镜面反射的分母项，使得修改后的Phong模型能够满足可逆性。
 
 ### Phong模型示例
-![]()
-![]()
-![]()
+![](http://oo8jzybo8.bkt.clouddn.com/3.Phong%E6%A8%A1%E5%9E%8B%E7%A4%BA%E4%BE%8B.png)   
+
+![](http://oo8jzybo8.bkt.clouddn.com/3.Phong%E6%A8%A1%E5%9E%8B%E7%A4%BA%E4%BE%8B1.png)    
+
+![](http://oo8jzybo8.bkt.clouddn.com/3.Phong%E6%A8%A1%E5%9E%8B%E7%A4%BA%E4%BE%8B2.png)    
+
